==> analogdevicesinc/msdk/Libraries/SDHC/ff14/Source/diskio.c <==
#include "ff.h" /* Obtains integer types */
#include "diskio.h" /* Declarations of disk functions */
#include "mxc_errors.h"
#define DEV_SD 0 /* Example: Map MMC/SD card to physical drive 1 */
#define INIT_CARD_RETRIES 10

DSTATUS disk_status(BYTE pdrv /* Physical drive nmuber to identify the drive */
)
{
    DSTATUS status = 0;

    if (!MXC_SDHC_Card_Inserted()) {
        init_done = 0;
        status = STA_NOINIT | STA_NODISK;
    }

    return status;
}

DSTATUS disk_initialize(BYTE pdrv /* Physical drive nmuber to identify the drive */
)
{
    DSTATUS status;

    rtc_en = 0;
#if (FF_FS_NORTC == 0)
    //Initialize RTC
    if (MXC_RTC->cn & MXC_F_RTC_CN_WE) {
        rtc_en = 1;
    } else {
        start_time_sec = (FF_NORTC_YEAR - 1980) * SEC_IN_YEAR_AVG;
        start_time_sec += FF_NORTC_MON * SEC_IN_MONTH_AVG;
        start_time_sec += FF_NORTC_MDAY * SEC_IN_DAY;
        if (RTC_init(MXC_RTC, start_time_sec, 0) == E_NO_ERROR) {
            rtc_en = 1;
        }
    }
#endif

    if (MXC_SDHC_Card_Inserted() && (MXC_SDHC_Lib_InitCard(INIT_CARD_RETRIES) == E_NO_ERROR)) {
        /* Card initialized and ready for work */
        init_done = 1;
        status = 0;
    } else {
        status = STA_NOINIT;
    }

    return status;
}

DRESULT disk_read(BYTE pdrv, /* Physical drive nmuber to identify the drive */
                  BYTE *buff, /* Data buffer to store read data */
                  LBA_t sector, /* Start sector in LBA */
                  UINT count /* Number of sectors to read */
)
{
    DRESULT status;

    if (MXC_SDHC_Lib_Read(buff, sector, count, MXC_SDHC_LIB_SINGLE_DATA) != E_NO_ERROR) {
        status = RES_ERROR;
    } else {
        status = RES_OK;
    }

    return status;
}

DRESULT disk_write(BYTE pdrv, /* Physical drive nmuber to identify the drive */
                   const BYTE *buff, /* Data to be written */
                   LBA_t sector, /* Start sector in LBA */
                   UINT count /* Number of sectors to write */
)
{
    DRESULT status;

    if (MXC_SDHC_Lib_Write(sector, (void *)buff, count, MXC_SDHC_LIB_SINGLE_DATA) != E_NO_ERROR) {
        status = RES_ERROR;
    } else {
        status = RES_OK;
    }

    return status;
}

DRESULT disk_ioctl(BYTE pdrv, /* Physical drive nmuber (0..) */
                   BYTE cmd, /* Control code */
                   void *buff /* Buffer to send/receive control data */
)
{
    DRESULT status;

    switch (cmd) {
    case CTRL_SYNC:
        /* Mandatory */
        status = ctrl_sync(buff);
        break;
    case GET_SECTOR_COUNT:
        /* Mandatory */
        status = get_sector_count(buff);
        break;
    case GET_BLOCK_SIZE:
        /* Mandatory */
        status = get_block_size(buff);
        break;
    case MMC_GET_CSD:
        /* Optional */
        status = mmc_get_csd(buff);
        break;
    default:
        status = RES_PARERR;
        break;
    }

    return status;
}

DSTATUS disk_status(BYTE drv /* Drive number (always 0) */
)
{
    if (drv)
        return STA_NOINIT;

    return Stat;
}

DSTATUS disk_initialize(BYTE drv /* Physical drive nmuber (0) */
)
{
    BYTE n, ty, cmd, buf[4];
    UINT tmr;
    DSTATUS s;

    if (drv)
        return RES_NOTRDY;

    dly_us(10000); /* 10ms */

    init_mmc();

    for (n = 10; n; n--)
        rcvr_mmc(buf, 1); /* Apply 80 dummy clocks and the card gets ready to receive command */

    ty = 0;
    if (send_cmd(CMD0, 0) == 1) { /* Enter Idle state */
        if (send_cmd(CMD8, 0x1AA) == 1) { /* SDv2? */
            rcvr_mmc(buf, 4); /* Get trailing return value of R7 resp */
            if (buf[2] == 0x01 && buf[3] == 0xAA) { /* The card can work at vdd range of 2.7-3.6V */
                for (tmr = 1000; tmr;
                     tmr--) { /* Wait for leaving idle state (ACMD41 with HCS bit) */
                    if (send_cmd(ACMD41, 1UL << 30) == 0)
                        break;
                    dly_us(1000);
                }
                if (tmr && send_cmd(CMD58, 0) == 0) { /* Check CCS bit in the OCR */
                    rcvr_mmc(buf, 4);
                    ty = (buf[0] & 0x40) ? CT_SDC2 | CT_BLOCK : CT_SDC2; /* SDv2+ */
                }
            }
        } else { /* SDv1 or MMCv3 */
            if (send_cmd(ACMD41, 0) <= 1) {
                ty = CT_SDC2;
                cmd = ACMD41; /* SDv1 */
            } else {
                ty = CT_MMC3;
                cmd = CMD1; /* MMCv3 */
            }
            for (tmr = 1000; tmr; tmr--) { /* Wait for leaving idle state */
                if (send_cmd(cmd, 0) == 0)
                    break;
                dly_us(1000);
            }
            if (!tmr || send_cmd(CMD16, 512) != 0) /* Set R/W block length to 512 */
                ty = 0;
        }
    }
    CardType = ty;
    s = ty ? 0 : STA_NOINIT;
    Stat = s;

    deselect();

    return s;
}

DRESULT disk_read(BYTE drv, /* Physical drive nmuber (0) */
                  BYTE *buff, /* Pointer to the data buffer to store read data */
                  LBA_t sector, /* Start sector number (LBA) */
                  UINT count /* Sector count (1..128) */
)
{
    BYTE cmd;
    DWORD sect = (DWORD)sector;

    if (disk_status(drv) & STA_NOINIT)
        return RES_NOTRDY;
    if (!(CardType & CT_BLOCK))
        sect *= 512; /* Convert LBA to byte address if needed */

    cmd = count > 1 ? CMD18 : CMD17; /*  READ_MULTIPLE_BLOCK : READ_SINGLE_BLOCK */
    if (send_cmd(cmd, sect) == 0) {
        do {
            if (!rcvr_datablock(buff, 512))
                break;
            buff += 512;
        } while (--count);
        if (cmd == CMD18)
            send_cmd(CMD12, 0); /* STOP_TRANSMISSION */
    }
    deselect();

    return count ? RES_ERROR : RES_OK;
}

DRESULT disk_write(BYTE drv, /* Physical drive nmuber (0) */
                   const BYTE *buff, /* Pointer to the data to be written */
                   LBA_t sector, /* Start sector number (LBA) */
                   UINT count /* Sector count (1..128) */
)
{
    DWORD sect = (DWORD)sector;

    if (disk_status(drv) & STA_NOINIT)
        return RES_NOTRDY;
    if (!(CardType & CT_BLOCK))
        sect *= 512; /* Convert LBA to byte address if needed */

    if (count == 1) { /* Single block write */
        if ((send_cmd(CMD24, sect) == 0) /* WRITE_BLOCK */
            && xmit_datablock(buff, 0xFE))
            count = 0;
    } else { /* Multiple block write */
        if (CardType & CT_SDC)
            send_cmd(ACMD23, count);
        if (send_cmd(CMD25, sect) == 0) { /* WRITE_MULTIPLE_BLOCK */
            do {
                if (!xmit_datablock(buff, 0xFC))
                    break;
                buff += 512;
            } while (--count);
            if (!xmit_datablock(0, 0xFD)) /* STOP_TRAN token */
                count = 1;
        }
    }
    deselect();

    return count ? RES_ERROR : RES_OK;
}

DRESULT disk_ioctl(BYTE drv, /* Physical drive nmuber (0) */
                   BYTE ctrl, /* Control code */
                   void *buff /* Buffer to send/receive control data */
)
{
    DRESULT res;
    BYTE n, csd[16];
    DWORD cs;

    if (disk_status(drv) & STA_NOINIT)
        return RES_NOTRDY; /* Check if card is in the socket */

    res = RES_ERROR;
    switch (ctrl) {
    case CTRL_SYNC: /* Make sure that no pending write process */
        if (sd_select())
            res = RES_OK;
        break;

    case GET_SECTOR_COUNT: /* Get number of sectors on the disk (DWORD) */
        if ((send_cmd(CMD9, 0) == 0) && rcvr_datablock(csd, 16)) {
            if ((csd[0] >> 6) == 1) { /* SDC ver 2.00 */
                cs = csd[9] + ((WORD)csd[8] << 8) + ((DWORD)(csd[7] & 63) << 16) + 1;
                *(LBA_t *)buff = cs << 10;
            } else { /* SDC ver 1.XX or MMC */
                n = (csd[5] & 15) + ((csd[10] & 128) >> 7) + ((csd[9] & 3) << 1) + 2;
                cs = (csd[8] >> 6) + ((WORD)csd[7] << 2) + ((WORD)(csd[6] & 3) << 10) + 1;
                *(LBA_t *)buff = cs << (n - 9);
            }
            res = RES_OK;
        }
        break;

    case GET_BLOCK_SIZE: /* Get erase block size in unit of sector (DWORD) */
        *(DWORD *)buff = 128;
        res = RES_OK;
        break;

    default:
        res = RES_PARERR;
    }

    deselect();

    return res;
}
